--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -87,12 +87,16 @@
     <android.support.v7.widget.CardView
         android:id="@+id/teamCard"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         app:cardBackgroundColor="@color/cardview_light_background"
         app:cardElevation="2dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_margin="5dp"
         app:cardCornerRadius="5dp"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"
+
         >
 
         <TextView
@@ -105,6 +109,31 @@
             android:layout_margin="10dp"/>
     </android.support.v7.widget.CardView>
 
+    <android.support.v7.widget.CardView
+        android:id="@+id/teamCardNoTeam"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        app:cardBackgroundColor="@color/cardview_light_background"
+        app:cardElevation="2dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_margin="5dp"
+        app:cardCornerRadius="5dp"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"
+        android:visibility="gone"
+
+        >
+
+        <TextView
+            android:id="@+id/teamNoTeam"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="noteam"
+            android:textStyle="bold"
+            android:textAppearance="@android:style/TextAppearance.Material.Medium"
+            android:layout_margin="10dp"/>
+    </android.support.v7.widget.CardView>
     <android.support.v7.widget.CardView
         android:id="@+id/searchCard"
         android:layout_width="match_parent"
