--- a/app/src/main/res/layout/activity_no_team.xml
+++ b/app/src/main/res/layout/activity_no_team.xml
@@ -10,16 +10,25 @@
         android:id="@+id/createNewTeamButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Create new team"
+        android:text="@string/create_team"
+        android:background="@drawable/fields_button_states"
         app:layout_constraintBottom_toTopOf="@id/joinTeamButton"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="24dp"
         />
 
     <Button
         android:id="@+id/joinTeamButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Join team"
+        android:text="@string/join_existing_team"
+        android:background="@drawable/fields_button_states"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf=""
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="32dp"
         />
 
     <TextView
@@ -28,13 +37,30 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
 
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:layout_marginTop="8dp"
-        android:gravity="center_vertical"
-        android:text="You aren't in any team"
+        android:gravity="center"
+        android:padding="10dp"
+        android:textStyle="bold"
+        android:text="@string/you_arent_in_any_team"
         app:layout_constraintBottom_toTopOf="@+id/createNewTeamButton"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
+
+    <ImageView
+        android:id="@+id/cross"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:src="@drawable/cross_outline"
+        app:layout_constraintBottom_toTopOf="@+id/createTeamText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
