--- a/app/src/main/res/layout/activity_new_event.xml
+++ b/app/src/main/res/layout/activity_new_event.xml
@@ -21,17 +21,16 @@
         android:id="@+id/type_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/type_spinner_text"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        />
+        android:layout_marginTop="4dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/type_spinner_text" />
 
     <TextView
         android:id="@+id/training_time_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/event_time"
+        android:text="@string/event_date"
         app:layout_constraintTop_toBottomOf="@id/type_spinner"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="16dp"
@@ -43,12 +42,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
+        android:layout_marginTop="4dp"
         android:text="Date"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/training_time_text"
-        android:textSize="20sp"
-        />
+        app:layout_constraintTop_toBottomOf="@id/training_time_text" />
 
     <TextView
         android:id="@+id/from_text"
@@ -64,13 +63,13 @@
         android:id="@+id/training_start_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/from_text"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="32dp"
-        android:textStyle="bold"
-        android:textSize="20sp"
+        android:layout_marginTop="4dp"
         android:text="Time"
-        />
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/from_text" />
 
     <TextView
         android:id="@+id/to_text"
@@ -86,13 +85,13 @@
         android:id="@+id/training_end_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="4dp"
         android:text="End time"
         android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="32dp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/to_text"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/to_text" />
 
 
     <TextView
@@ -137,7 +136,9 @@
         android:layout_height="wrap_content"
         android:text="@string/publish"
         app:layout_constraintBottom_toBottomOf="parent"
-       android:backgroundTint="@color/colorPrimary"/>
+       android:background="@color/colorPrimary"
+        android:clickable="true"
+        android:focusable="true"/>
 
     <TextView
         android:id="@+id/error_message"
