--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -227,12 +227,12 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:background="@drawable/rounded_view"
-        android:backgroundTint="@color/premium_yellow"
+        android:backgroundTint="@color/premium_blue"
         android:elevation="2dp"
         android:gravity="center"
         android:padding="10dp"
         android:text="@string/fields_plus"
-        android:textColor="@color/blacknot"
+        android:textColor="@color/white"
         android:textStyle="bold"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/activityBar"
