--- a/app/src/main/res/layout/activity_no_team.xml
+++ b/app/src/main/res/layout/activity_no_team.xml
@@ -10,118 +10,102 @@
         android:id="@+id/createNewTeamButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/create_team"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/rounded_view_green"
-        app:layout_constraintBottom_toTopOf="@id/joinTeamButton"
         android:clickable="true"
         android:focusable="true"
+        android:text="@string/create_team"
+
+        app:layout_constraintBottom_toTopOf="@id/joinTeamButton"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="24dp"
-        />
+        android:layout_marginEnd="16dp" />
 
     <Button
         android:id="@+id/joinTeamButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/join_existing_team"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/rounded_view_green"
         android:clickable="true"
         android:focusable="true"
+        android:text="@string/join_existing_team"
+
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="32dp"
-        />
+        android:layout_marginEnd="16dp" />
 
     <TextView
         android:id="@+id/createTeamText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-
+        android:textSize="16sp"
         android:layout_marginEnd="32dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
         android:gravity="center"
         android:padding="10dp"
         android:text="@string/you_arent_in_any_team"
-        android:textStyle="bold"
 
-        app:layout_constraintBottom_toTopOf="@+id/createNewTeamButton"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/cross" />
 
-    <android.support.v7.widget.CardView
+
+    <LinearLayout
+        android:id="@+id/features_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:clickable="false"
-        android:elevation="3dp"
-        android:layout_marginTop="16dp"
-        app:cardCornerRadius="10dp"
+        android:orientation="vertical"
+        android:padding="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/createNewTeamButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/createTeamText">
 
-        <LinearLayout
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@string/manage_team"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
-            android:gravity="center"
-            android:orientation="vertical"
-            android:padding="10dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/set_event"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/manage_team"
-                android:textColor="@color/colorPrimary"
-                android:textStyle="bold"
-                android:textSize="18sp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/see_who_is_in"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/set_event"
-                android:textColor="@color/colorPrimary"
-                android:textStyle="bold"
-                android:textSize="18sp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/chat_with_team"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+    </LinearLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/see_who_is_in"
-                android:textColor="@color/colorPrimary"
-                android:textStyle="bold"
-                android:textSize="18sp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/chat_with_team"
-                android:textColor="@color/colorPrimary"
-                android:textStyle="bold"
-                android:textSize="18sp"/>
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
     <ImageView
         android:id="@+id/cross"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:src="@drawable/cross_outline"
-        app:layout_constraintBottom_toTopOf="@+id/createTeamText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
