--- a/app/src/main/res/layout/activity_team_chat.xml
+++ b/app/src/main/res/layout/activity_team_chat.xml
@@ -6,4 +6,122 @@
     android:layout_height="match_parent"
     tools:context=".TeamChatActivity">
 
+    <com.fields.curiumx.fields.EmptyRecyclerView
+        android:id="@+id/team_chat_recycler"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@id/send_stuff"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </com.fields.curiumx.fields.EmptyRecyclerView>
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/send_stuff"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/Background_Fields"
+        android:elevation="4dp"
+        app:layout_constraintBottom_toBottomOf="parent">
+    <EditText
+        android:id="@+id/message_box_team"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/write"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/send_button_team"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
+        <Button
+            android:id="@+id/send_button_team"
+            android:layout_width="79dp"
+            android:layout_height="43dp"
+            android:backgroundTint="@color/colorPrimary"
+            android:text="@string/fui_button_text_send"
+            android:clickable="true"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/message_box_team"
+            app:layout_constraintTop_toTopOf="parent" />
+    </android.support.constraint.ConstraintLayout>
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/noTeamFieldsPlusScreen"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/blacknot"
+        android:visibility="gone">
+
+        <ImageView
+            android:id="@+id/conversation_picture"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="32dp"
+            android:contentDescription="@string/conversation"
+            android:src="@drawable/chat_art"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed" />
+
+        <TextView
+            android:id="@+id/level_up_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="32dp"
+            android:layout_marginStart="32dp"
+            android:gravity="center"
+            android:padding="5dp"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/level_up_text2"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/conversation_picture"
+            app:layout_constraintVertical_chainStyle="packed" />
+
+        <TextView
+            android:id="@+id/level_up_text2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="32dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="16dp"
+            android:gravity="center"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/discover"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/level_up_text" />
+
+        <Button
+            android:id="@+id/discover"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:background="@drawable/rounded_view"
+            android:backgroundTint="@color/premium_blue"
+            android:clickable="true"
+            android:elevation="5dp"
+            android:focusable="true"
+            android:text="@string/discover"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+    </android.support.constraint.ConstraintLayout>
+
+
 </android.support.constraint.ConstraintLayout>
