--- a/app/src/main/res/layout/activity_user_chat.xml
+++ b/app/src/main/res/layout/activity_user_chat.xml
@@ -18,6 +18,7 @@
     </com.fields.curiumx.fields.EmptyRecyclerView>
 
     <EditText
+        android:inputType="text"
         android:id="@+id/message_box"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -37,6 +38,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/message_box" />
+
+
 
 </android.support.constraint.ConstraintLayout>
 
