--- a/app/src/main/res/layout/activity_create_new_team.xml
+++ b/app/src/main/res/layout/activity_create_new_team.xml
@@ -50,7 +50,8 @@
         android:layout_height="wrap_content"
         android:hint="@string/team_username"
         android:inputType="text"
-        android:maxLength="28"/>
+        android:maxLength="28"
+        android:lines="1"/>
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -72,6 +73,7 @@
         android:hint="@string/team_full_name"
         android:inputType="text"
         android:maxLength="28"
+        android:lines="1"
         />
     </android.support.design.widget.TextInputLayout>
 
@@ -84,6 +86,7 @@
         android:text="@string/team_country"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/teamFullNameInput"
+        android:lines="1"
         />
 
     <Spinner
