--- a/app/src/main/res/layout/activity_detail_team.xml
+++ b/app/src/main/res/layout/activity_detail_team.xml
@@ -3,7 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/detaila">
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/Background_Fields"/>
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/basicInfoContainer"
@@ -11,7 +17,7 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:paddingBottom="16dp"
-        android:elevation="1dp">
+        android:elevation="4dp">
 
         <FrameLayout
             android:id="@+id/team_photo"
@@ -36,7 +42,7 @@
                 android:layout_height="70dp"
                 android:layout_gravity="center"
                 android:elevation="6dp"
-                android:src="@drawable/field_photo3" />
+                android:src="@drawable/team_basic" />
 
         </FrameLayout>
 
@@ -86,37 +92,37 @@
         </LinearLayout>
 
 
-        <TextView
-            android:id="@+id/teamLevel"
+        <LinearLayout
+            android:id="@+id/level_map"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:background="@drawable/rounded_view"
+            android:elevation="2dp"
             android:padding="5dp"
-            android:paddingEnd="7dp"
-            android:paddingStart="7dp"
-            android:text="team level"
-            android:textStyle="bold"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/team_photo" />
+            app:layout_constraintTop_toBottomOf="@id/team_photo"
+            app:layout_constraintBottom_toBottomOf="@id/basicInfoContainer"
+            android:layout_marginBottom="2dp">
 
-        <TextView
-            android:id="@+id/teamEventCount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/rounded_view"
-            app:layout_constraintStart_toEndOf="@id/teamLevel"
-            android:text="event count"
-            android:padding="5dp"
-            android:paddingEnd="7dp"
-            android:paddingStart="7dp"
-            android:textStyle="bold"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/ic_level" />
 
+            <TextView
+                android:id="@+id/teamLevel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="5dp"
+                android:layout_marginStart="5dp"
+                android:background="@drawable/rounded_view"
+                android:text="team level"
+                android:textStyle="bold" />
+        </LinearLayout>
 
-            app:layout_constraintTop_toBottomOf="@id/team_photo"/>
 
 
         <TextView
@@ -124,73 +130,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_view"
-            android:text="player count"
+            android:text="@string/players"
             android:padding="5dp"
             android:paddingEnd="7dp"
             android:paddingStart="7dp"
             android:textStyle="bold"
+            android:elevation="2dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
 
 
-            app:layout_constraintStart_toEndOf="@id/teamEventCount"
+            app:layout_constraintStart_toEndOf="@id/level_map"
             app:layout_constraintTop_toBottomOf="@id/team_photo"/>
 
-        <ImageView
-            android:id="@+id/dropdown1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:src="@drawable/ic_dropdown"
-            app:layout_constraintBottom_toBottomOf="@id/basicInfoContainer"
-            app:layout_constraintEnd_toEndOf="@id/basicInfoContainer" />
+
 
     </android.support.constraint.ConstraintLayout>
-
-    <LinearLayout
-        android:id="@+id/drop2"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:background="@color/colorPrimary"
-        android:orientation="vertical"
-        android:visibility="invisible"
-        android:elevation="0.25dp"
-        app:layout_constraintBottom_toBottomOf="@id/basicInfoContainer"
-        >
-
-        <TextView
-            android:id="@+id/homeFieldText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:text="home field"
-            android:textStyle="bold"
-            android:visibility="gone" />
-
-        <TextView
-            android:id="@+id/leader_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="4dp"
-            android:text="leader"
-            android:textStyle="bold"
-            android:visibility="gone" />
-
-        <TextView
-            android:id="@+id/workstyle_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="4dp"
-            android:text="work style"
-            android:textStyle="bold"
-            android:visibility="gone" />
-
-
-
-    </LinearLayout>
 
     <TextView
         android:id="@+id/events_text"
@@ -202,7 +157,6 @@
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/add_event_image"
         app:layout_constraintTop_toBottomOf="@id/basicInfoContainer" />
 
     <TextView
@@ -210,17 +164,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:background="@drawable/rounded_view"
         android:backgroundTint="@color/colorPrimary"
-        android:elevation="3dp"
+        android:elevation="1dp"
         android:gravity="center"
-        android:padding="5dp"
+        android:padding="10dp"
         android:text="@string/join_team"
         android:textColor="@color/blacknot"
         android:textStyle="bold"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
