--- a/app/src/main/res/layout/activity_edit_field.xml
+++ b/app/src/main/res/layout/activity_edit_field.xml
@@ -34,101 +34,85 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/fieldPhotoEdit11" />
 
-        <TextView
-            android:id="@+id/field_name_text1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="4dp"
-            android:text="@string/field_name"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/press_text1" />
-
-        <EditText
-            android:id="@+id/display_name_change11"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/field_name_input1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/field_name_text1"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginStart="32dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/press_text1"
             android:layout_marginEnd="32dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="8dp">
+        <EditText
+            android:hint="@string/field_name"
+            android:id="@+id/field_name1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:lines="1"
             android:maxLength="28"
             />
+        </android.support.design.widget.TextInputLayout>
 
-        <TextView
-            android:id="@+id/field_area_text1"
-            android:layout_width="wrap_content"
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/field_area_input1"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="4dp"
-            android:text="@string/field_area"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/display_name_change11" />
-
+            app:layout_constraintTop_toBottomOf="@id/field_name_input1"
+            android:layout_marginEnd="32dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="8dp">
         <EditText
+            android:hint="@string/field_area"
+            android:inputType="text"
             android:id="@+id/field_area1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/field_area_text1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="32dp"
             android:maxLength="28"
+            android:lines="1"
             />
+        </android.support.design.widget.TextInputLayout>
 
-        <TextView
-            android:id="@+id/field_address_text1"
-            android:layout_width="wrap_content"
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/field_address_input1"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="4dp"
-            android:text="@string/field_address"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/field_area1" />
-
+            app:layout_constraintTop_toBottomOf="@id/field_area_input1"
+            android:layout_marginEnd="64dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="8dp">
         <EditText
+            android:hint="@string/field_address"
+            android:inputType="text"
             android:id="@+id/field_address1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="64dp"
-            android:layout_marginStart="32dp"
             android:maxLength="28"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/field_address_text1" />
+            android:lines="1"
+             />
+        </android.support.design.widget.TextInputLayout>
 
         <ImageView
             android:id="@+id/map1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:contentDescription="@string/goto_map"
             android:src="@drawable/ic_map"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/field_type1"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/field_address1"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.52" />
+            app:layout_constraintStart_toEndOf="@+id/field_address_input1"
+            app:layout_constraintTop_toBottomOf="@+id/field_area_input1" />
 
-        <TextView
-            android:id="@+id/maptext1"
-            android:layout_width="59dp"
-            android:layout_height="46dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:gravity="center_horizontal"
-            android:text="@string/tap_to_find"
-            android:textSize="10sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.51"
-            app:layout_constraintStart_toEndOf="@+id/field_address1"
-            app:layout_constraintTop_toBottomOf="@id/map1"
-            app:layout_constraintVertical_bias="0.0" />
+
 
         <TextView
             android:id="@+id/field_type_text1"
@@ -138,7 +122,7 @@
             android:layout_marginTop="8dp"
             android:text="@string/field_type"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/field_address1" />
+            app:layout_constraintTop_toBottomOf="@id/field_address_input1" />
 
         <Spinner
             android:id="@+id/field_type1"
