--- a/app/src/main/res/layout/activity_edit_team.xml
+++ b/app/src/main/res/layout/activity_edit_team.xml
@@ -48,7 +48,9 @@
             android:id="@+id/edit_full_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/team_full_name"/>
+            android:hint="@string/team_full_name"
+            android:maxLength="28"
+            android:lines="1"/>
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -68,7 +70,9 @@
             android:id="@+id/edit_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/team_username"/>
+            android:hint="@string/team_username"
+            android:maxLength="28"
+            android:lines="1"/>
     </android.support.design.widget.TextInputLayout>
 
     <TextView
