--- a/app/src/main/res/layout/activity_team.xml
+++ b/app/src/main/res/layout/activity_team.xml
@@ -45,7 +45,7 @@
                 android:layout_height="70dp"
                 android:layout_gravity="center"
                 android:elevation="6dp"
-                android:src="@drawable/field_photo3" />
+                android:src="@drawable/team_basic" />
 
         </FrameLayout>
 
