--- a/app/src/main/res/layout/activity_field_detail.xml
+++ b/app/src/main/res/layout/activity_field_detail.xml
@@ -157,18 +157,17 @@
         <TextView
             android:id="@+id/imTrainingHereNoMoreButton"
             android:layout_width="wrap_content"
-            android:elevation="5dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:background="@drawable/rounded_view"
-            android:textAllCaps="false"
-            android:textStyle="bold"
-            android:text="@string/you_are_training_here"
             android:backgroundTint="@color/FieldsMenuItemNotSelected"
-            android:visibility="visible"
+            android:elevation="5dp"
             android:padding="8dp"
+            android:text="@string/you_are_training_here"
+            android:textAllCaps="false"
             android:textColor="@color/white"
+            android:textStyle="bold"
+            android:visibility="gone"
             app:layout_constraintEnd_toStartOf="@id/dropdown"
             app:layout_constraintStart_toEndOf="@id/amountOfPeople"
             app:layout_constraintTop_toBottomOf="@+id/fieldType"
@@ -207,7 +206,24 @@
         app:layout_constraintTop_toBottomOf="@id/events_text_field">
 
 
+
+
     </com.fields.curiumx.fields.EmptyRecyclerView>
+
+    <TextView
+        android:id="@+id/empty_view_field"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
+        android:gravity="center"
+        android:text="@string/no_upcoming_events_field"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@id/field_event_recycler"
+        app:layout_constraintEnd_toEndOf="@id/field_event_recycler"
+        app:layout_constraintStart_toStartOf="@id/field_event_recycler"
+        app:layout_constraintTop_toTopOf="@id/field_event_recycler" />
 
     <LinearLayout
         android:id="@+id/activityBar"
